--- a/Automodeller demo.ipynb
+++ b/Automodeller demo.ipynb
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from AutoMMM.automodeller import AutoModeller\n",
+    "from autoMMM.automodeller import AutoModeller\n",
     "import openai\n",
     "openai.api_key = \"your key here\"\n"
    ]
